crates/mapal-rewrite/tests/snapshots/golden__sum_to_n_report.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 1,
    applied: [],
    skipped_non_canonical: false,
}
