crates/mapal-rewrite/tests/snapshots/golden__vector_add_mermaid.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("0: i32"))
        f0o3(("1: i32"))
        f0o4(("2: i32"))
        f0o5(("3: i32"))
        f0o6(("4: i32"))
        f0o7(("5: i32"))
        f0o8(("6: i32"))
        f0o9(("7: i32"))
        f0o10(("8: i32"))
        f0o11(("9: i32"))
        f0o12(("10: i32"))
        f0o13(("11: i32"))
        f0o14(("12: i32"))
        f0o15(("13: i32"))
        f0o16(("14: i32"))
        f0o17(("15: i32"))
        f0o18(("100: i32"))
        f0o19(("100: i32"))
        f0o20(("100: i32"))
        f0o21(("100: i32"))
        f0o22(("100: i32"))
        f0o23(("100: i32"))
        f0o24(("100: i32"))
        f0o25(("100: i32"))
        f0o26(("100: i32"))
        f0o27(("100: i32"))
        f0o28(("100: i32"))
        f0o29(("100: i32"))
        f0o30(("100: i32"))
        f0o31(("100: i32"))
        f0o32(("100: i32"))
        f0o33(("100: i32"))
        f0o34(("#quot;c[0]  = #quot;: str"))
        f0o35(("0: i32"))
        f0o36(("#quot;c[15] = #quot;: str"))
        f0o37(("15: i32"))
        f0o38(("#quot;sum   = #quot;: str"))
        f0o39(("0: i32"))
        f0o40(("a: [i32; 16]"))
        f0o41(("b: [i32; 16]"))
        f0o42(("(io, str)"))
        f0o43(("io"))
        f0o44(("([i32; 16], [i32; 16])"))
        f0o45(("[(i32, i32); 16]"))
        f0o46(("c: [i32; 16]"))
        f0o47(("(i32, [i32; 16])"))
        f0o48(("total: i32"))
        f0o49(("([i32; 16], i32)"))
        f0o50(("i32"))
        f0o51(("([i32; 16], i32)"))
        f0o52(("i32"))
        f0o53(("(io, i32)"))
        f0o54(("io"))
        f0o55(("(io, str)"))
        f0o56(("io"))
        f0o57(("(io, i32)"))
        f0o58(("io"))
        f0o59(("(io, str)"))
        f0o60(("io"))
        f0o61(("(io, i32)"))
        f0o62(("io"))
        f0o2 -- "Pair 0/16" --> f0o40
        f0o3 -- "Pair 1/16" --> f0o40
        f0o4 -- "Pair 2/16" --> f0o40
        f0o5 -- "Pair 3/16" --> f0o40
        f0o6 -- "Pair 4/16" --> f0o40
        f0o7 -- "Pair 5/16" --> f0o40
        f0o8 -- "Pair 6/16" --> f0o40
        f0o9 -- "Pair 7/16" --> f0o40
        f0o10 -- "Pair 8/16" --> f0o40
        f0o11 -- "Pair 9/16" --> f0o40
        f0o12 -- "Pair 10/16" --> f0o40
        f0o13 -- "Pair 11/16" --> f0o40
        f0o14 -- "Pair 12/16" --> f0o40
        f0o15 -- "Pair 13/16" --> f0o40
        f0o16 -- "Pair 14/16" --> f0o40
        f0o17 -- "Pair 15/16" --> f0o40
        f0o18 -- "Pair 0/16" --> f0o41
        f0o19 -- "Pair 1/16" --> f0o41
        f0o20 -- "Pair 2/16" --> f0o41
        f0o21 -- "Pair 3/16" --> f0o41
        f0o22 -- "Pair 4/16" --> f0o41
        f0o23 -- "Pair 5/16" --> f0o41
        f0o24 -- "Pair 6/16" --> f0o41
        f0o25 -- "Pair 7/16" --> f0o41
        f0o26 -- "Pair 8/16" --> f0o41
        f0o27 -- "Pair 9/16" --> f0o41
        f0o28 -- "Pair 10/16" --> f0o41
        f0o29 -- "Pair 11/16" --> f0o41
        f0o30 -- "Pair 12/16" --> f0o41
        f0o31 -- "Pair 13/16" --> f0o41
        f0o32 -- "Pair 14/16" --> f0o41
        f0o33 -- "Pair 15/16" --> f0o41
        f0o0 -- "Pair 0/2" --> f0o42
        f0o34 -- "Pair 1/2" --> f0o42
        f0o42 -- "Print" --> f0o43
        f0o40 -- "Pair 0/2" --> f0o44
        f0o41 -- "Pair 1/2" --> f0o44
        f0o44 -- "Zip" --> f0o45
        f0o45 -- "Map" --> f0o46
        f0o39 -- "Pair 0/2" --> f0o47
        f0o46 -- "Pair 1/2" --> f0o47
        f0o47 -- "Fold" --> f0o48
        f0o46 -- "Pair 0/2" --> f0o49
        f0o35 -- "Pair 1/2" --> f0o49
        f0o49 -- "Index" --> f0o50
        f0o46 -- "Pair 0/2" --> f0o51
        f0o37 -- "Pair 1/2" --> f0o51
        f0o51 -- "Index" --> f0o52
        f0o43 -- "Pair 0/2" --> f0o53
        f0o50 -- "Pair 1/2" --> f0o53
        f0o53 -- "Println" --> f0o54
        f0o54 -- "Pair 0/2" --> f0o55
        f0o36 -- "Pair 1/2" --> f0o55
        f0o55 -- "Print" --> f0o56
        f0o56 -- "Pair 0/2" --> f0o57
        f0o52 -- "Pair 1/2" --> f0o57
        f0o57 -- "Println" --> f0o58
        f0o58 -- "Pair 0/2" --> f0o59
        f0o38 -- "Pair 1/2" --> f0o59
        f0o59 -- "Print" --> f0o60
        f0o60 -- "Pair 0/2" --> f0o61
        f0o48 -- "Pair 1/2" --> f0o61
        f0o61 -- "Println" --> f0o62
        f0o62 -- "Output" --> f0o1
    end
    subgraph f1["fn main::map@0"]
        f1o0(("(i32, i32)"))
        f1o1(("ret: i32"))
        f1o2(("i32"))
        f1o3(("i32"))
        f1o4(("(i32, i32)"))
        f1o0 -- "Proj 0" --> f1o2
        f1o0 -- "Proj 1" --> f1o3
        f1o2 -- "Pair 0/2" --> f1o4
        f1o3 -- "Pair 1/2" --> f1o4
        f1o4 -- "Add" --> f1o1
    end
    subgraph f2["fn main::fold@1"]
        f2o0(("(i32, i32)"))
        f2o1(("ret: i32"))
        f2o2(("i32"))
        f2o3(("i32"))
        f2o4(("(i32, i32)"))
        f2o0 -- "Proj 0" --> f2o2
        f2o0 -- "Proj 1" --> f2o3
        f2o2 -- "Pair 0/2" --> f2o4
        f2o3 -- "Pair 1/2" --> f2o4
        f2o4 -- "Add" --> f2o1
    end
