crates/mapal-rewrite/tests/snapshots/golden__zip_demo_report.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 2,
    applied: [
        (
            ConstFold,
            2,
        ),
        (
            Dce,
            1,
        ),
    ],
    skipped_non_canonical: false,
}
